--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       type="image/svg+xml"
       href="/1x1/favicon.ico"
     />
+    <link
+      rel="apple-touch-icon"
+      href="/1x1/apple-touch-icon.png"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -23,8 +27,9 @@
       name="theme-color"
       content="#1976d2"
     />
-    <title>1x1 Lern-App</title>
+    <title>Vyvit's 1x1</title>
   </head>
+
   <body>
     <div id="app"></div>
     <script
